--- a/server/component-config.json
+++ b/server/component-config.json
@@ -3,4 +3,10 @@
     "mountPath": "/explorer",
     "generateOperationScopedModels": true
   }
+  ,
+  "loopback-fixtures": {
+    "fixturePath": "/fixtures/data/",
+    "append": false,
+    "autoLoad": false
+  }
 }
